# Ency-OCR-Barcode-App

./: .gitignore  README.md  pyproject.toml
barcode_reader/: .gitignore
barcode_reader/src/app/: barcodes_generator.py  main.py
barcode_reader/src/app/Enums/: image_exception.py
barcode_reader/src/app/Router/: image_router.py
barcode_reader/src/app/Schemas/: barcode_schema.py
barcode_reader/src/app/Service/: image_service.py
extract nutrition/src/app/services/: file_service.py  ocr_service.py
extract nutrition/src/media/: README.md
extract_nutrition/src/app/: main.py
extract_nutrition/src/app/enums/: http_error.py
extract_nutrition/src/app/llm/: llm_singleton.py  ocr_extractor.py  prompts.py
extract_nutrition/src/app/routers/: ocr.py
extract_nutrition/src/app/schemas/: metadata_schema.py  vietnamese_food_nutritions.py
extract_nutrition/src/app/services/: file_service.py
gateway/src/app/: main.py
gateway/src/app/auth/: api_key_auth.py
gateway/src/app/config/: api_config.py
gateway/src/app/router/: barcode_router.py  ocr_router.py
gateway/src/app/service/: barcode_service.py  ocr_service.py
src/app/: dependencies.py  hatchet_client.py  hatchet_workers.py  main.py
src/app/constants/: __init__.py
src/app/database/: connection.py
src/app/llm/: llm_singleton.py  ocr_extractor.py  prompts.py
src/app/models/: __init__.py  models.py
src/app/openai_client/: openai_client.py  openai_prompt.py
src/app/repositories/: metadata_repository.py  ocr_repository.py
src/app/routers/: image.py  ocr.py
src/app/services/: file_service.py  image_service.py  ocr_service.py
src/app/tasks/: example_task.py
src/app/workers/: hatchet_worker.py
